Add movie activity and its functions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,16 @@
     package="es.uniovi.eii.sdm.favmovies">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".NewMovie"></activity>
+        <activity
+            android:name=".ShowMovie"
+            android:label="@string/title_activity_show_movie"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainRecycler">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +21,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".CategoryActivity" />
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
     </application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
